--- a/personal-budget/src/app/menu/menu.component.html
+++ b/personal-budget/src/app/menu/menu.component.html
@@ -3,7 +3,7 @@
       <!-- This is an A11y Change -->
       <li aria-label="Home Button"><a [routerLink]= "['/']">Home</a></li>
       <li aria-label="About Button"><a [routerLink]= "['/about']">About</a></li>
-      <li aria-label="Login Button"><a [routerLink]= "['/login.html']">Login</a></li>
-      <li><a [routerLink]= "['https://google.com']">Google</a></li>
+      <li aria-label="Login Button"><a [routerLink]= "['/login']">Login</a></li>
+      <li aria-label="Contact Button"><a [routerLink]= "['/contact']">Contact</a></li>
   </ul>
 </div>
