--- a/personal-budget/src/styles.scss
+++ b/personal-budget/src/styles.scss
@@ -414,7 +414,7 @@ div.hero h2 {
   text-align: center;
 }
 
-.container div.text-box {
+.container div.text-box, pb-article, article {
   display: inline-block;
   width: 100%;
   max-width: 340px;
